--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,17 @@
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+.exe
+.exe~
+.dll
+.so
+.dylib
 
 # Test binary, built with `go test -c`
-*.test
+.test
 
 # Code coverage profiles and other test artifacts
-*.out
+.out
 coverage.*
 *.coverprofile
 profile.cov
@@ -28,5 +28,5 @@ go.work.sum
 .env
 
 # Editor/IDE
-# .idea/
-# .vscode/
+.idea/
+.vscode/
