update logic for NFT data

--- a/nft-admin/nginx.conf
+++ b/nft-admin/nginx.conf
@@ -49,6 +49,11 @@ http {
 
         location / {
             try_files $uri $uri/ /index.html;
+            add_header Cache-Control "no-store, no-cache, must-revalidate" always;
+        }
+
+        location /assets/ {
+            add_header Cache-Control "public, max-age=31536000, immutable" always;
         }
 
         error_page   500 502 503 504  /50x.html;
